--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@fortawesome/vue-fontawesome": "^3.0.5",
     "axios": "^1.6.5",
     "bootstrap": "^5.3.2",
-    "vue": "^3.3.11"
+    "vue": "^3.3.11",
+    "vue-loading-overlay": "^6.0.3",
+    "vue-sweetalert2": "^5.0.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.5.2",
